--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ostep-projects"]
 	path = ostep-projects
 	url = https://github.com/remzi-arpacidusseau/ostep-projects
+[submodule "ostep-code"]
+	path = ostep-code
+	url = https://github.com/remzi-arpacidusseau/ostep-code
